fix work page on mobile

--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -100,6 +100,9 @@ main {
         transition: inherit;
         height: 450px;
         object-fit: cover;
+        @media screen and (max-width: $screen-mobile) {
+          height: 370px;
+        }
       }
 
       .copy {
@@ -115,6 +118,14 @@ main {
         padding: 30px;
         box-shadow: 4px 5px 11px 0 rgba(0, 0, 0, 0.38);
 
+        @media screen and (max-width: $screen-mobile) {
+          left: 0;
+          right: 0;
+          margin: 16px;
+          transform: translateX(0%);
+          max-width: 370px;
+          min-width: unset;
+        }
         p {
           overflow: hidden;
           text-overflow: ellipsis;
